[package]
name = "win-hotkeys"
version = "0.5.1"
license = "MIT"
repository = "https://github.com/iholston/win-hotkeys"
homepage = "https://github.com/iholston/win-hotkeys"
documentation = "https://docs.rs/win-hotkeys"
readme = "README.md"
description = "A lightweight, thread-safe rust library for system-wide hotkey management on Windows"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["hotkey", "windows", "keyboard", "global", "win32"]
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]}
thiserror = "2.0.11"
crossbeam-channel = "0.5.14"
num_enum = "0.7.4"
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"] 
